2004-01-30  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/pointer-list-view.c: (pointer_list_view_add_column),
	(pointer_list_view_select):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Expand text column in treeviews, select playing row when changing
	playing song except when changing due to an EOS event.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:

	Updated for upcoming 0.3.1 release.
	
	* src/PlaylistWindow.cs:

	De-iconify window when tray icon is clicked.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Remove awkward DefaultButton hack.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* data/muine.schemas.in:

	Set playlist dir to ~/Music/Playlists instead of ~/Playlists
	
	* libmuine/metadata.c: (assign_metadata_mp3),
	(FLAC_metadata_callback):

	Replaygain for mp3s, (hopefully) fix FLAC song duration.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_pack_double):

	Fix precision for db_pack_double.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Don't unnecessarily change the selected row when a row is deleted.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Fix the bug where sometimes different songs than added would
	be played.

2004-01-28  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Improve cover image fetching reliability.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* configure.in:
	* libmuine/Makefile.am:
	* libmuine/metadata.c: (assign_metadata_vorbiscomment),
	(assign_metadata_ogg), (FLAC_read_callback), (FLAC_write_callback),